[BE] fix : config 설정 변경